# copra

./: .gitignore  .pre-commit-config.yaml  LICENSE  README  README.md  noxfile.py  pyproject.toml  requirements.txt  setup_dev.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue_template.md
.github/workflows/: build-test-dev.yml  ci.yml  lint.yml
docs/: README.md
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
examples/: .gitignore  Makefile  README.md  comprehensive_example.py  run_example.py
examples/adder/: dut_golden.pyi
examples/adder/hdl/: adder.sv
examples/adder/tests/: Makefile  test_adder.py
examples/complex_cpu/: Makefile  README.md  clock_gen.sv  cpu_complex.sv  cpu_core.sv  cpu_top.sv  cpu_top_interface.html  cpu_top_interface.md  cpu_top_interface.rst  cpu_top_types.py  generate_stubs.py  pipeline_stages.sv  support_modules.sv  test_copra_demo.py  test_cpu.py  test_cpu_generated.py
examples/cpu/rtl/: clock_gen.sv  core.sv  cpu.sv  cpu_top.sv  pipeline_stages.sv  support_modules.sv
examples/cpu/tests/: Makefile  test_cpu.py
examples/dff/rtl/: dff.sv
examples/dff/tests/: Makefile  test_dff.py
examples/dsp_pipeline/rtl/: channel_processor.sv  dsp_pipeline.sv  fft_butterfly.sv  filter_tap.sv  processing_stage.sv
examples/dsp_pipeline/tests/: Makefile  test_dsp_pipeline.py
examples/matrix_multiplier/: dut_golden.pyi
examples/matrix_multiplier/tests/: Makefile  matrix_multiplier_tests.py
examples/memory_controller/rtl/: arbiter.sv  channel_controller.sv  memory_bank.sv  memory_controller.sv
examples/memory_controller/tests/: Makefile  test_memory_controller.py
examples/minimal/: Makefile  README.md  dut.pyi  generate_stubs.py  minimal.sv  minimal_interface.html  minimal_interface.md  minimal_interface.rst  test_minimal.py  test_minimal_generated.py
examples/multi_dim_array/: dut_golden.pyi
examples/multi_dim_array/rtl/: multi_dim_array.sv  multi_dim_array_pkg.sv
examples/multi_dim_array/tests/: Makefile  test_multi_dim_array.py
examples/packet_processor/rtl/: additional_modules.sv  buffer_controller.sv  flow_control_unit.sv  packet_inspector.sv  packet_processor.sv  port_controller.sv
examples/packet_processor/tests/: Makefile  test_packet_processor.py
examples/simple_dff/: Makefile  README.md  dff.sv  dff_interface.html  dff_interface.md  dut_golden.pyi  generate_stubs.py  test_dff.py
src/copra/: __init__.py  _version.py  analysis.py  cli.py  config.py  core.py  discovery.py  generation.py  integration.py  introspection.py  metadata.py  mocking.py  py.typed  simulation.py  stubgen.py  utils.py
src/copra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/copra/integration/: autostub.py  standalone_stubgen.py
tests/: conftest.py  run_stub_comparison.py  test_analysis.py  test_cli.py  test_core.py  test_enhanced_core.py  test_generation.py  test_identifier_handling.py  test_init.py  test_integration.py  test_integration_comprehensive.py  test_metadata.py  test_mocking.py  test_simulation.py  test_stable_ordering.py  test_stubgen.py  test_type_stubs.py  test_utils.py
tests/pytest/: test_dynamic_module_names.py  test_stub_comparison.py
